style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --header-section-height: 6vh;
  --footer-section-height: 10vh;
}

body {
  color: rgb(19, 186, 55);
  background-color: rgb(30, 30, 34);
  font-family: roboto;
  font-weight: 800;
  padding: 0 20px 0 20px;
}

header{
  min-height: var(--header-section-height);
  margin: 20px 0px;
}

main {
  min-height: calc(100vh - var(--header-section-height) - var(--footer-section-height))
}

footer{
  min-height: var(--footer-section-height);
  display: flex;
  justify-content: space-between;
  padding: 20px 0px;
  
}

.header-title{
  text-align: center;
}

.dashboard-num{
  font-size: 2rem;
  color: rgb(47, 173, 247);
  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
}

a:visited{
  color: white;
}

.hash-map{
  display: flex;
  gap: 30px;
  font-size: 0.85em;
}

.metrics-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
  padding: 20px;
  margin-bottom: 40px;
  position: sticky;
  top: 20px;
  background-color: rgb(30, 30, 34);
  z-index: 2;
}

.buckets-col{
  display: flex;
  flex-direction: column;
  gap: 2px;
}

.buckets-col div {
  width: 28px;
  height: 30px;
  border: 1px solid rgb(47, 173, 247);
  display: flex;
  justify-content: center;
  align-items: center;
}

.buckets-col div::after {
  content: '{{';
  position: absolute;
  transform: translateX(30px);
}

.nodes-col {
  display: flex;
  flex-direction: column;
  gap: 2px;
  overflow: scroll;
}

.nodes-row{
  display: flex;
  gap:20px;
}

.node div {
  min-width: min-content;
  padding: 6px;
  height: 30px;
  border: 1px solid violet;

  text-wrap: nowrap;
}

.node {
  display: flex;
  gap: 20px;
}

.btn-wrapper{
  display: flex;
  justify-content: center;

  position: sticky;
  top: 120px;
}

@media screen and (max-width: 418px){
  .btn-wrapper{
    top:140px;
  }
}

.add-jim-btn{
  background-color: rgb(47, 173, 247);
  padding: 10px 20px;
  font-size: 1.2em;
  border:none;
  border-radius: 5px;
  cursor: pointer;
  z-index: 2;
  color: white;
  transition: ease 2s;
  opacity: 0;
}

.btn-backdrop{
  transition: ease 2s;
  opacity: 0;
  box-shadow: 2px 2px 2px white;
  border:none;
  border-radius: 5px;
}

.tip-scales{
  font-weight: 500;
  transition: ease 2s;
  opacity: 0;
  background-color: rgb(30, 30, 34);
  color: white;
  font-size: 1.2em;
  padding: 10px;
  border: 1px solid white;  
  border-radius: 10px;
}

.add-jim-btn:active{
  transform: translateX(2px) translateY(2px);
}

